wordpress-cloudql-nginx-ingress/5-Wordpress-service.yaml
#### Backend Config ####
---
## wordpress service ##			
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  labels:
    app: wordpress
    tier: frontend
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"ports": {"80":"wordpress-backendconfig"}}'   
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: wordpress
    tier: frontend
  type: ClusterIP
